# llm-json-contract-miner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: expected.schema.json  outputs.jsonl
src/llm_json_contract_miner/: __init__.py  analyzer.py  cli.py  contract.py  io.py  models.py  reports.py  schema.py
tests/: test_llm_json_contract_miner.py
