[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-json-contract-miner"
version = "0.2.0"
description = "Offline contract mining and drift reports for LLM JSON outputs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "llm-json-contract-miner contributors"}]
keywords = ["llm", "json", "schema", "evals", "ci", "structured-output", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yanqr213/llm-json-contract-miner"
Issues = "https://github.com/yanqr213/llm-json-contract-miner/issues"

[project.scripts]
llm-json-contract-miner = "llm_json_contract_miner.cli:main"
ljcm = "llm_json_contract_miner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
